--- a/NControlDemo/NControlDemo.Droid/Properties/AndroidManifest.xml
+++ b/NControlDemo/NControlDemo.Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="ncontroldemo">
 	<uses-sdk android:minSdkVersion="18" />
 	<application android:label="NControlDemo" android:theme="@style/Theme.NewSolution" android:icon="@drawable/icon">
 		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="YOUR_API_KEY_HERE" />
