--- a/NControl/NControl.WP81/NControl.WP81.csproj
+++ b/NControl/NControl.WP81/NControl.WP81.csproj
@@ -123,7 +123,7 @@
       <Name>NControl</Name>
     </ProjectReference>
   </ItemGroup>
-  <Import Project="..\..\NControl.Win\NControl.Win.projitems" Label="Shared" />
+  <Import Project="..\NControl.Win\NControl.Win.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
   <ProjectExtensions />
